# rewrite-docs

./: .dockerignore  .env.development  .env.example  .gitattributes  .gitignore  .gitmodules  .mcp.json  .test-protection  00-RL-INDEX.md  ARTIFACTS-SUMMARY.md  BATCHES_MANIFEST.json  CANARY_PHASE_A_PROD_DEPLOYMENT_CHECKLIST.md  CHANGELOG.md  CI-CD-ROOT-CAUSE-FINDINGS.md  CIC_ASHFALL_STATE.md  CIC_MASTER_ROADMAP.md  CIC_RUNTIME_OBSERVABILITY_PLAN.md  CIC_TOKEN_PACK_v2_0_COMPONENT_PATCHES.md  CIC_TOKEN_PACK_v2_0_tokens.css  CIC_TOKEN_PACK_v2_0_tokens.json  CIC_TOKEN_PACK_v2_0_tokens.ts  CLAUDE.md  CLAUDE.original.md  DOCKER-BUILD-SUMMARY.md  DOCKER.md  Dockerfile  Dockerfile.cli  Dockerfile.codeflow  Dockerfile.smoke  Dockerfile.test  Dockerfile.ui  FINAL-STATUS-8-ITEMS.md  GIT-REMEDIATION-REVIEW.md  GITHUB-ACTIONS-PROCESS.md  INTEGRATION_GUIDE.md  Invoke-GeminiRepoScan.ps1  MEMORY_V1_STAGING_ACTIVATION.md  MISSING_TOKENS_FOR_AGENTS_PANEL.md  P1_IMPLEMENTATION_COMPLETE.md  PHASE-23-6-MEMORY-EXPLORER-UI.md  (+172 more)
castironforge/torque-query/: HARDENING-NOTES.md  Makefile  PHASE-26-READINESS.md  README.md  pyproject.toml  run_server.ps1
castironforge/torque-query/scripts/: ingest.py
castironforge/torque-query/src/: __init__.py  main.py
docs-rag/: CHANGESET.md  README.md  TESTS.md  pyproject.toml
docs-rag/config/: settings.yaml
docs-rag/scripts/: ingest.py  query.py  watch_docs.py
docs-rag/src/: main.py
docs-rag/src/ingestion/: chunker.py  indexer.py  loader.py
docs-rag/src/rag/: engine.py  prompts.py
docs-rag/src/sdk/: client.ts  (+1 more)
docs-rag/tests/: test_torquequery.py
(+4669 files in other folders)
